--- a/docs/js-advanced/事件循环.md
+++ b/docs/js-advanced/事件循环.md
@@ -1,6 +1,65 @@
 # 事件循环机制（event loop）
 
-要理解事件循环机制,先熟悉 js 内存机制
+## 进程
+
+每个程序在运行时都需要有它自己专属的内存空间，我们可以简单的把这块内存空间理解为进程。每一个应用都至少有一个进程，可以启动多个进程，进程之间是相互独立的，即使要通信，也需要双方的同意。
+![](./image/进程.png)
+
+## 线程
+线程可以理解为进程下面的孩子，上面说的一个程序只要有一个进程，所以在进程开启后会自动创建一个线程来运行代码，该线程称之为主线程。
+如果程序需要同时执行多块代码，主线程就会启动更多的线程来执行代码，所以一个进程中又可以包含多个线程。
+![](./image/线程.png)
+
+## 浏览器有那些进程与线程
+浏览器在运行时为了避免相互影响，减少奔溃的几率，当启动浏览器后，他会自动启动多个进程。
+浏览器程序运行时，会启动浏览器主进程，而网络进程，渲染进程等由浏览器进程启动
+![](./image/浏览器进程.png)
+
+可以打开浏览器的任务管理器查看当前的所有进程。
+![](./image/进程列表.png)
+其中，最主要的进程有：
+
+**浏览器进程：**
+
+**主要负责界面显示、用户交互、子进程管理等。浏览器进程内部会启用多个线程处理不同的任务。**
+
+**网络线程:**
+
+**负责加载网络资源。网络进程内部会启动多个线程来处理不同的网络任务。**
+
+**渲染进程:**
+- **当前每一个标签页启动一个渲染进程，如果打开标签页较多，进程也会相应增加，后续chrome将做出优化，每一个域名一个进程，多个标签页同一个域名将共享一个进程**
+- **渲染进程启动后，会开启一个渲染主线程，主线程负责执行HTML、CSS、JS代码。**
+- **默认情况下，浏览器会为每个标签页开启一个新的渲染进程，以保证不同的标签页之前不相互影响。**
+- **事件循环就是在这个进程内执行的**
+## js同步/异步
+
+### 异步
+在代码执行过程中，会遇到一些无法立即处理的任务，比如：
+- 计时完成后需要执行的任务--setTimeout、setInterval
+- 网络通信完成后需要执行的任务 -- XHR、Fetch
+- 用户操作后需要执行的任务 -- addEventListener
+- 如果让渲染主线程等到这些任务的时机达到，就会导致主线程长期处于【阻塞】状态，从而导致浏览器【假死】
+
+![](./image/异步.png)
+
+**但是渲染主线程就是浏览器和用户交互的任务，它承担着极其重要的任务，它无论如何都不能阻塞！**
+
+所以，浏览器选择异步来解决这个问题，如下图所示，当遇到一个计时任务时，会立即开启一个计时线程，然后紧接着执行消息队列的下一个任务，当计时器结束后将回调函数放入消息队列末尾，依次排序进入渲染主线程中。
+
+**使用异步的方式，渲染主线程用不阻塞**
+
+![](./image/异步方式.png)
+
+**总结**
+- 单线程是异步产生的原因
+- JavaScript是一门单线程的语言，因为他运行在浏览器的渲染主线程中，而渲染主线程只有一个。而渲染主线程承担着诸多的任务，如渲染页面、执行JS都在其中运行。
+- 如果使用同步的方式，就既有可能导致主线程产生阻塞，从而导致消息队列中很多其他任务无法得到执行。一方面导致繁忙的主线程白白消耗时间，另一方面导致页面无法及时更新，给用户造成页面卡死现象。
+- 所以浏览器采用异步的方式来避免。具体做法时当某些任务发生时，比如计时器、网络、事件监听。主线程任务交给其他线程去处理，自身立即结束任务的执行，转而执行后续代码。当其他线程完成时，将事先传递的回调函数包装成任务，加入到消息队列的末尾排队，等到主线程调度执行。在这种异步模式下，浏览器用不阻塞，从而最大限度的保证了单线程的流畅运行。
+
+## 事件循环解决的问题
+
+事件循环又称为消息循环，在chrome中称为（message loop），主要是解决js单线程阻塞问题，是js异步的实现方式
 
 ## js 内存机制
 
@@ -80,7 +139,19 @@ console.log(m.a); // 15
 
 ## 浏览器循环事件
 
+**事件循环又称为消息循环，是渲染主线程的工作方式；
+在chrome源码中，渲染主线程启动时会启动一个无限循环的for，每次循环依次从消息队列内取出第一个任务执行，而其他线程只需要在合适的时机将任务加入到对应的队列末尾即可**
+
 JavaScript 代码的执行过程中，除了依靠函数调用`栈`来搞定函数的执行顺序外，还依靠任务队列(task queue)来搞定另外一些代码的执行。整个执行过程，我们称为事件循环过程。一个线程中，事件循环是唯一的，但是任务队列可以拥有多个。任务队列又分为 macro-task（宏任务）与 micro-task（微任务），在最新标准中，它们被分别称为 task 与 jobs。
+
+**目前两种队列已无法满足复杂的浏览器环境，W3C 不再使用宏队列的说法，根据W3C的最新解释**
+- **任务是没有优先级之分，每个任务都有一个任务类型，同一个类型的任务必须在一个队列，不同类型的任务可以分属于不同的队列。在一次事件循环中，浏览器可以根据实际情况从不同的队列中取出任务执行。**
+- **浏览器必须准备好一个微队列，微队列中的任务优先所有其他任务执行HTML Standard**
+
+**在目前 chrome 的实现中，至少包含了下面的队列：**
+- **延时队列：用于存放计时器到达后的回调任务，优先级「中」**
+- **交互队列：用于存放用户操作后产生的事件处理任务，优先级「高」**
+- **微队列：用户存放需要最快执行的任务，优先级「最高」**
 
 ### 宏任务
 
@@ -270,3 +341,22 @@ setTimeout(() => {
 ## node 和浏览器 EventLoop 的主要区别
 
 两者最主要的区别在于浏览器中的微任务是在每个相应的宏任务中执行的，而 nodejs 中的微任务是在不同阶段之间执行的。
+
+## JS中的定时器能做到精确计时吗？为什么？
+- 操作系统的计时函数本身就有少量偏差，由于JS的计时器最终调用的是操作系统的函数，也就携带了这些偏差
+- 按照W3C的标准，浏览器实现计时器时，如果嵌套层级超过5层，则会带有4毫秒的最少时间，这样在计时的时间少于4毫秒时又带来了偏差
+- 受事件循环的影响，计时器的回调函数只能在主线程执行完同步任务与优先级高的任务后才执行，所以会有一定的偏差
+
+## 解释事件循环
+
+- 事件循环又称为消息循环，是渲染主线程的工作方式；
+- 在chrome源码中，渲染主线程启动时会启动一个无限循环的for，每次循环依次从消息队列内取出第一个任务执行，而其他线程只需要在合适的时机将任务加入到对应的队列末尾即可
+- 过去将任务队列简单的分为宏队列与微队列，目前两种队列已无法满足复杂的浏览器环境，W3C 不再使用宏队列的说法，取而代之的是一种更加灵活多变的方式
+- 根据W3C的最新解；任务是没有优先级之分，每个任务都有一个任务类型，同一个类型的任务必须在一个队列，不同类型的任务可以分属于不同的队列。在一次事件循环中，浏览器可以根据实际情况从不同的队列中取出任务执行。浏览器必须准备好一个微队列，微队列中的任务优先所有其他任务执行
+
+## 解释异步
+
+- 单线程是异步产生的原因，事件循环是异步的实现方式
+- JavaScript是一门单线程的语言，因为他运行在浏览器的渲染主线程中，而渲染主线程只有一个。而渲染主线程承担着诸多的任务，如渲染页面、执行JS都在其中运行。
+- 如果使用同步的方式，就既有可能导致主线程产生阻塞，从而导致消息队列中很多其他任务无法得到执行。一方面导致繁忙的主线程白白消耗时间，另一方面导致页面无法及时更新，给用户造成页面卡死现象。
+- 所以浏览器采用异步的方式来避免。具体做法时当某些任务发生时，比如计时器、网络、事件监听。主线程任务交给其他线程去处理，自身立即结束任务的执行，转而执行后续代码。当其他线程完成时，将事先传递的回调函数包装成任务，加入到消息队列的末尾排队，等到主线程调度执行。在这种异步模式下，浏览器用不阻塞，从而最大限度的保证了单线程的流畅运行。
